// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component] Deck renders correctly 1`] = `
<View
  style={
    Object {
      "borderColor": "#00A4D3",
      "borderRadius": 16,
      "borderWidth": 1,
      "flexDirection": "row",
      "margin": 5,
      "minHeight": 80,
      "padding": 5,
    }
  }
>
  <View
    style={
      Object {
        "borderColor": "#00A4D3",
        "borderRadius": 20,
        "borderWidth": 1,
        "flex": 0.5,
        "overflow": "hidden",
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "flex": 1,
          "height": null,
          "width": null,
        }
      }
    />
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 2,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      JavaScript
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 15,
          "fontWeight": "bold",
          "marginTop": 10,
        }
      }
    >
      1
       cards
    </Text>
  </View>
</View>
`;

exports[`[Component] Deck renders user shallow correctly 1`] = `
<Component
  style={
    Object {
      "borderColor": "#00A4D3",
      "borderRadius": 16,
      "borderWidth": 1,
      "flexDirection": "row",
      "margin": 5,
      "minHeight": 80,
      "padding": 5,
    }
  }
>
  <Component
    style={
      Object {
        "borderColor": "#00A4D3",
        "borderRadius": 20,
        "borderWidth": 1,
        "flex": 0.5,
        "overflow": "hidden",
      }
    }
  >
    <Image
      source={1}
      style={
        Object {
          "flex": 1,
          "height": null,
          "width": null,
        }
      }
    />
  </Component>
  <Component
    style={
      Object {
        "alignItems": "center",
        "flex": 2,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 20,
          "fontWeight": "bold",
        }
      }
    >
      JavaScript
    </Text>
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "fontSize": 15,
          "fontWeight": "bold",
          "marginTop": 10,
        }
      }
    >
      1
       cards
    </Text>
  </Component>
</Component>
`;
